--- a/css/index.css
+++ b/css/index.css
@@ -8,9 +8,9 @@ div.parent {
     flex-direction: column;
     flex-wrap: nowrap;
     align-items: stretch;
-    align-content: stretch;
     justify-content: stretch;
     text-align: center;
+    height: 100vh;
 }
 
 div.title:nth-child(1) {
@@ -20,42 +20,47 @@ div.title:nth-child(1) {
     flex-basis: auto;
     align-self: auto;
     order: 0;
+    align-content: center;
 }
 
 div.top5:nth-child(2) {
     display: block;
-    flex-grow: 0;
+    flex-grow: 1;
     flex-shrink: 1;
     flex-basis: auto;
     align-self: auto;
     order: 0;
+    align-content: center;
 }
 
 div.username:nth-child(3) {
     display: block;
-    flex-grow: 0;
+    flex-grow: 0.5;
     flex-shrink: 1;
     flex-basis: auto;
     align-self: auto;
     order: 0;
+    align-content: center;
 }
 
 div.decorations:nth-child(4) {
     display: block;
-    flex-grow: 0;
+    flex-grow: 0.2;
     flex-shrink: 1;
     flex-basis: auto;
     align-self: auto;
     order: 0;
+    align-content: center;
 }
 
 div.startButton:nth-child(5) {
     display: block;
-    flex-grow: 0;
+    flex-grow: 1;
     flex-shrink: 1;
     flex-basis: auto;
     align-self: auto;
     order: 0;
+    align-content: center;
 }
 
 div.footer:nth-child(6) {
@@ -65,6 +70,7 @@ div.footer:nth-child(6) {
     flex-basis: auto;
     align-self: auto;
     order: 0;
+    align-content: center;
 }
 
 /*--------------------------Title-------------------------------*/
@@ -77,12 +83,11 @@ div.title h1 {
 
 /*--------------------------Top 5------------------------------*/
 
-div.top5 {
-    float: right;
-}
+div.top5 {}
 
-div.top5 p {
+div.top5 li {
     font-weight: bold;
+    align-items: center;
 }
 
 /*-------------------------Username----------------------------*/
@@ -95,31 +100,41 @@ div.decorations {}
 
 /*------------------------Start Button-------------------------*/
 
-div.startButton {}
+div.startButton a{
+    text-decoration: none;
+    color: black;
+}
 
 div.startButton button {
-    width: 10vh;
-    height: 5vh;
+    width: 40vh;
+    height: 20vh;
     border-radius: 10px;
-    background-color: blueviolet;
-    color: white;
-}
+    background-color: blueviolet;}
 
 /*---------------------------Footer---------------------------*/
-div.footer p {
-    font-size: 0.5em;
-}
+
 
 /*------------------------Media Query-------------------------*/
 
 /* Desktop of groter */
 @media screen and (min-width: 1024px) {
 
-    /*-----------------------Title----------------------*/
-
-    div.title {
-        background: mediumvioletred;
+    /*---------------------General----------------------*/
+    div.parent {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(7, 1fr);
+        grid-column-gap: 0px;
+        grid-row-gap: 0px;
     }
+    div.title { grid-area: 1 / 1 / 2 / 3; }
+    div.top5 { grid-area: 2 / 2 / 6 / 3; }
+    div.username { grid-area: 2 / 1 / 4 / 2; }
+    div.decorations { grid-area: 4 / 1 / 6 / 2; }
+    div.startButton { grid-area: 6 / 1 / 7 / 3; }
+    div.footer { grid-area: 7 / 1 / 8 / 3; }
+
+    /*-----------------------Title----------------------*/
 
     /*---------------------Username---------------------*/
 
