Add timer functionality and display for Memory Game

--- a/css/index.css
+++ b/css/index.css
@@ -225,6 +225,8 @@
 
     #pairsFound{}
 
+    #timer{}
+
     /*------------------------Remaining Time------------------------*/
 
     div.remainingTime progress[value] {
