Enhance card game UI and functionality with CSS updates and event listeners

--- a/css/global.css
+++ b/css/global.css
@@ -1,6 +1,8 @@
 /*-----------------------Variables----------------------*/
 :root {
-
+    --card-open: darkgreen;
+    --card-found: blueviolet;
+    --card-default: #89f257;
 }
 
 /*------------------------Fonts-------------------------*/
